--- a/_includes/comment-form.html
+++ b/_includes/comment-form.html
@@ -5,7 +5,7 @@
 
     <form name="comments" method="post" action="https://staticwho.herokuapp.com/v2/entry/gunniwho/gunniwho.github.io/master/comments" >
 
-        <input name="options[redirect]" type="hidden" value="http://localhost:4000{{ page.url }}">
+        <input name="options[redirect]" type="hidden" value="{{ site.url }}{{ page.url }}">
         <input name="options[slug]" hidden type="hidden" value="{{ page.slug }}">
 
         <p>
